# hackathon42

./: .gitignore  .gitmodules  ARCHITECTURE.md  BodyDomainArchitecture_Def_Hackathon.txt  README.md  sdv-deployment-architecture.drawio
components/analyze-agent/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
components/analyze-agent/scripts/: test_container.sh
components/analyze-agent/src/analyze_agent/: __init__.py  __main__.py  agent.py  analyze_prompt.md  cache.py  core.py  handler.py  kb.py  models.py  tools.py
components/analyze-agent/tests/: test_models.py  test_tools.py
components/analyze-agent/tests/fixtures/demo__repo__main/kb/_index/: components.md  dependency-graph.md
components/aws-infrastructure/: .gitignore  .terraform.lock.hcl  ARCHITECTURE.md  README.md  main.tf  outputs.tf  variables.tf
components/frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
components/ingestion-agent/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
components/ingestion-agent/scripts/: test_container.sh
components/ingestion-agent/src/ingest_agent/: __init__.py  __main__.py  agent.py  arxml.py  core.py  handler.py  skill.md  tools.py  workspace.py
components/ingestion-agent/tests/: component_test.py  test_arxml.py  test_handler.py  test_tools.py
components/ingestion-agent/tests/artifacts/: component_api_responses.json
components/ingestion-agent/tests/fixtures/: mini.arxml
integration-tests/: README.md  quality_report.md  recorded_responses.json  reference_agents.py  run_integration.py
knowledge_base/input/: README.md
(+119 files in other folders)
