[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyze-agent"
version = "0.1.0"
description = "Strands analyze agent: navigate an AUTOSAR KB and emit a change-impact envelope."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "strands-agents>=1.0.0",
    "boto3>=1.34",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
analyze-agent = "analyze_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analyze_agent = ["analyze_prompt.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
